Installer/Model/DAL/SourceMetaExprParser.java
// $ANTLR 3.1.2 C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g 2009-06-27 14:36:58

	using System.Diagnostics;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class SourceMetaExprParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALIAS", "BIND", "RCON", "EXEC", "META", "METADATA", "COMMAND", "TYPE", "SCRIPTINFO", "WHITESPACE", "NEWLINE", "SEMI", "ID", "SCRIPTNAME", "NAME", "TOGGLE", "KEY", "SUBKEY", "DESCRIPTION", "ALTNAME", "ICON", "SL_COMMENT", "WS", "CHARACTER", "'\"'"
    };
    public static final int SCRIPTNAME=17;
    public static final int T__28=28;
    public static final int KEY=20;
    public static final int ICON=24;
    public static final int WHITESPACE=13;
    public static final int EXEC=7;
    public static final int ID=16;
    public static final int EOF=-1;
    public static final int SEMI=15;
    public static final int META=8;
    public static final int SCRIPTINFO=12;
    public static final int CHARACTER=27;
    public static final int COMMAND=10;
    public static final int TYPE=11;
    public static final int ALTNAME=23;
    public static final int NAME=18;
    public static final int WS=26;
    public static final int DESCRIPTION=22;
    public static final int NEWLINE=14;
    public static final int BIND=5;
    public static final int SL_COMMENT=25;
    public static final int ALIAS=4;
    public static final int SUBKEY=21;
    public static final int TOGGLE=19;
    public static final int METADATA=9;
    public static final int RCON=6;

    // delegates
    // delegators


        public SourceMetaExprParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SourceMetaExprParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return SourceMetaExprParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g"; }


    public static class prog_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "prog"
    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:25:1: prog : ( metaDecl | whiteSpace | NEWLINE )+ ;
    public final SourceMetaExprParser.prog_return prog() throws RecognitionException {
        SourceMetaExprParser.prog_return retval = new SourceMetaExprParser.prog_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token NEWLINE3=null;
        SourceMetaExprParser.metaDecl_return metaDecl1 = null;

        SourceMetaExprParser.whiteSpace_return whiteSpace2 = null;


        CommonTree NEWLINE3_tree=null;

        try {
            // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:25:6: ( ( metaDecl | whiteSpace | NEWLINE )+ )
            // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:25:9: ( metaDecl | whiteSpace | NEWLINE )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:25:9: ( metaDecl | whiteSpace | NEWLINE )+
            int cnt1=0;
            loop1:
            do {
                int alt1=4;
                switch ( input.LA(1) ) {
                case SCRIPTNAME:
                case NAME:
                case TOGGLE:
                case KEY:
                case SUBKEY:
                case DESCRIPTION:
                case ALTNAME:
                case ICON:
                    {
                    alt1=1;
                    }
                    break;
                case ALIAS:
                case BIND:
                case RCON:
                case EXEC:
                case ID:
                case 28:
                    {
                    alt1=2;
                    }
                    break;
                case NEWLINE:
                    {
                    alt1=3;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:25:11: metaDecl
            	    {
            	    pushFollow(FOLLOW_metaDecl_in_prog102);
            	    metaDecl1=metaDecl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, metaDecl1.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:25:77: whiteSpace
            	    {
            	    pushFollow(FOLLOW_whiteSpace_in_prog108);
            	    whiteSpace2=whiteSpace();

            	    state._fsp--;

            	    adaptor.addChild(root_0, whiteSpace2.getTree());

            	    }
            	    break;
            	case 3 :
            	    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:25:90: NEWLINE
            	    {
            	    NEWLINE3=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_prog112); 

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "prog"

    public static class metaDecl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "metaDecl"
    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:27:1: metaDecl : ( overallScriptInfo | explicitMetaData | metaData NEWLINE ALIAS id unNeededLineEnding -> ^( ALIAS id metaData ) | metaData NEWLINE ( RCON )? id unNeededLineEnding -> ^( COMMAND id metaData ) );
    public final SourceMetaExprParser.metaDecl_return metaDecl() throws RecognitionException {
        SourceMetaExprParser.metaDecl_return retval = new SourceMetaExprParser.metaDecl_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token NEWLINE7=null;
        Token ALIAS8=null;
        Token NEWLINE12=null;
        Token RCON13=null;
        SourceMetaExprParser.overallScriptInfo_return overallScriptInfo4 = null;

        SourceMetaExprParser.explicitMetaData_return explicitMetaData5 = null;

        SourceMetaExprParser.metaData_return metaData6 = null;

        SourceMetaExprParser.id_return id9 = null;

        SourceMetaExprParser.unNeededLineEnding_return unNeededLineEnding10 = null;

        SourceMetaExprParser.metaData_return metaData11 = null;

        SourceMetaExprParser.id_return id14 = null;

        SourceMetaExprParser.unNeededLineEnding_return unNeededLineEnding15 = null;


        CommonTree NEWLINE7_tree=null;
        CommonTree ALIAS8_tree=null;
        CommonTree NEWLINE12_tree=null;
        CommonTree RCON13_tree=null;
        RewriteRuleTokenStream stream_NEWLINE=new RewriteRuleTokenStream(adaptor,"token NEWLINE");
        RewriteRuleTokenStream stream_RCON=new RewriteRuleTokenStream(adaptor,"token RCON");
        RewriteRuleTokenStream stream_ALIAS=new RewriteRuleTokenStream(adaptor,"token ALIAS");
        RewriteRuleSubtreeStream stream_id=new RewriteRuleSubtreeStream(adaptor,"rule id");
        RewriteRuleSubtreeStream stream_unNeededLineEnding=new RewriteRuleSubtreeStream(adaptor,"rule unNeededLineEnding");
        RewriteRuleSubtreeStream stream_metaData=new RewriteRuleSubtreeStream(adaptor,"rule metaData");
        try {
            // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:27:9: ( overallScriptInfo | explicitMetaData | metaData NEWLINE ALIAS id unNeededLineEnding -> ^( ALIAS id metaData ) | metaData NEWLINE ( RCON )? id unNeededLineEnding -> ^( COMMAND id metaData ) )
            int alt3=4;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:27:11: overallScriptInfo
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_overallScriptInfo_in_metaDecl124);
                    overallScriptInfo4=overallScriptInfo();

                    state._fsp--;

                    adaptor.addChild(root_0, overallScriptInfo4.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:28:4: explicitMetaData
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_explicitMetaData_in_metaDecl129);
                    explicitMetaData5=explicitMetaData();

                    state._fsp--;

                    adaptor.addChild(root_0, explicitMetaData5.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:29:4: metaData NEWLINE ALIAS id unNeededLineEnding
                    {
                    pushFollow(FOLLOW_metaData_in_metaDecl135);
                    metaData6=metaData();

                    state._fsp--;

                    stream_metaData.add(metaData6.getTree());
                    NEWLINE7=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_metaDecl137);  
                    stream_NEWLINE.add(NEWLINE7);

                    ALIAS8=(Token)match(input,ALIAS,FOLLOW_ALIAS_in_metaDecl139);  
                    stream_ALIAS.add(ALIAS8);

                    pushFollow(FOLLOW_id_in_metaDecl141);
                    id9=id();

                    state._fsp--;

                    stream_id.add(id9.getTree());
                    pushFollow(FOLLOW_unNeededLineEnding_in_metaDecl143);
                    unNeededLineEnding10=unNeededLineEnding();

                    state._fsp--;

                    stream_unNeededLineEnding.add(unNeededLineEnding10.getTree());


                    // AST REWRITE
                    // elements: id, ALIAS, metaData
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 29:49: -> ^( ALIAS id metaData )
                    {
                        // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:29:52: ^( ALIAS id metaData )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot(stream_ALIAS.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_id.nextTree());
                        adaptor.addChild(root_1, stream_metaData.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:30:4: metaData NEWLINE ( RCON )? id unNeededLineEnding
                    {
                    pushFollow(FOLLOW_metaData_in_metaDecl158);
                    metaData11=metaData();

                    state._fsp--;

                    stream_metaData.add(metaData11.getTree());
                    NEWLINE12=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_metaDecl160);  
                    stream_NEWLINE.add(NEWLINE12);

                    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:30:21: ( RCON )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==RCON) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:30:21: RCON
                            {
                            RCON13=(Token)match(input,RCON,FOLLOW_RCON_in_metaDecl162);  
                            stream_RCON.add(RCON13);


                            }
                            break;

                    }

                    pushFollow(FOLLOW_id_in_metaDecl165);
                    id14=id();

                    state._fsp--;

                    stream_id.add(id14.getTree());
                    pushFollow(FOLLOW_unNeededLineEnding_in_metaDecl167);
                    unNeededLineEnding15=unNeededLineEnding();

                    state._fsp--;

                    stream_unNeededLineEnding.add(unNeededLineEnding15.getTree());


                    // AST REWRITE
                    // elements: metaData, id
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 30:49: -> ^( COMMAND id metaData )
                    {
                        // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:30:52: ^( COMMAND id metaData )
                        {
                        CommonTree root_1 = (CommonTree)adaptor.nil();
                        root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(COMMAND, "COMMAND"), root_1);

                        adaptor.addChild(root_1, stream_id.nextTree());
                        adaptor.addChild(root_1, stream_metaData.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "metaDecl"

    public static class whiteSpace_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "whiteSpace"
    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:32:1: whiteSpace : ( ALIAS id unNeededLineEnding -> WHITESPACE | ( RCON )? id unNeededLineEnding -> WHITESPACE | BIND id unNeededLineEnding -> WHITESPACE | ( RCON )? EXEC id unNeededLineEnding -> WHITESPACE );
    public final SourceMetaExprParser.whiteSpace_return whiteSpace() throws RecognitionException {
        SourceMetaExprParser.whiteSpace_return retval = new SourceMetaExprParser.whiteSpace_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token ALIAS16=null;
        Token RCON19=null;
        Token BIND22=null;
        Token RCON25=null;
        Token EXEC26=null;
        SourceMetaExprParser.id_return id17 = null;

        SourceMetaExprParser.unNeededLineEnding_return unNeededLineEnding18 = null;

        SourceMetaExprParser.id_return id20 = null;

        SourceMetaExprParser.unNeededLineEnding_return unNeededLineEnding21 = null;

        SourceMetaExprParser.id_return id23 = null;

        SourceMetaExprParser.unNeededLineEnding_return unNeededLineEnding24 = null;

        SourceMetaExprParser.id_return id27 = null;

        SourceMetaExprParser.unNeededLineEnding_return unNeededLineEnding28 = null;


        CommonTree ALIAS16_tree=null;
        CommonTree RCON19_tree=null;
        CommonTree BIND22_tree=null;
        CommonTree RCON25_tree=null;
        CommonTree EXEC26_tree=null;
        RewriteRuleTokenStream stream_EXEC=new RewriteRuleTokenStream(adaptor,"token EXEC");
        RewriteRuleTokenStream stream_BIND=new RewriteRuleTokenStream(adaptor,"token BIND");
        RewriteRuleTokenStream stream_RCON=new RewriteRuleTokenStream(adaptor,"token RCON");
        RewriteRuleTokenStream stream_ALIAS=new RewriteRuleTokenStream(adaptor,"token ALIAS");
        RewriteRuleSubtreeStream stream_id=new RewriteRuleSubtreeStream(adaptor,"rule id");
        RewriteRuleSubtreeStream stream_unNeededLineEnding=new RewriteRuleSubtreeStream(adaptor,"rule unNeededLineEnding");
        try {
            // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:33:2: ( ALIAS id unNeededLineEnding -> WHITESPACE | ( RCON )? id unNeededLineEnding -> WHITESPACE | BIND id unNeededLineEnding -> WHITESPACE | ( RCON )? EXEC id unNeededLineEnding -> WHITESPACE )
            int alt6=4;
            switch ( input.LA(1) ) {
            case ALIAS:
                {
                alt6=1;
                }
                break;
            case RCON:
                {
                int LA6_2 = input.LA(2);

                if ( (LA6_2==EXEC) ) {
                    alt6=4;
                }
                else if ( (LA6_2==ID||LA6_2==28) ) {
                    alt6=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 2, input);

                    throw nvae;
                }
                }
                break;
            case ID:
            case 28:
                {
                alt6=2;
                }
                break;
            case BIND:
                {
                alt6=3;
                }
                break;
            case EXEC:
                {
                alt6=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }

            switch (alt6) {
                case 1 :
                    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:33:4: ALIAS id unNeededLineEnding
                    {
                    ALIAS16=(Token)match(input,ALIAS,FOLLOW_ALIAS_in_whiteSpace187);  
                    stream_ALIAS.add(ALIAS16);

                    pushFollow(FOLLOW_id_in_whiteSpace189);
                    id17=id();

                    state._fsp--;

                    stream_id.add(id17.getTree());
                    pushFollow(FOLLOW_unNeededLineEnding_in_whiteSpace191);
                    unNeededLineEnding18=unNeededLineEnding();

                    state._fsp--;

                    stream_unNeededLineEnding.add(unNeededLineEnding18.getTree());


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 33:32: -> WHITESPACE
                    {
                        adaptor.addChild(root_0, (CommonTree)adaptor.create(WHITESPACE, "WHITESPACE"));

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 2 :
                    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:34:4: ( RCON )? id unNeededLineEnding
                    {
                    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:34:4: ( RCON )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==RCON) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:34:4: RCON
                            {
                            RCON19=(Token)match(input,RCON,FOLLOW_RCON_in_whiteSpace201);  
                            stream_RCON.add(RCON19);


                            }
                            break;

                    }

                    pushFollow(FOLLOW_id_in_whiteSpace204);
                    id20=id();

                    state._fsp--;

                    stream_id.add(id20.getTree());
                    pushFollow(FOLLOW_unNeededLineEnding_in_whiteSpace206);
                    unNeededLineEnding21=unNeededLineEnding();

                    state._fsp--;

                    stream_unNeededLineEnding.add(unNeededLineEnding21.getTree());


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 34:32: -> WHITESPACE
                    {
                        adaptor.addChild(root_0, (CommonTree)adaptor.create(WHITESPACE, "WHITESPACE"));

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:35:4: BIND id unNeededLineEnding
                    {
                    BIND22=(Token)match(input,BIND,FOLLOW_BIND_in_whiteSpace216);  
                    stream_BIND.add(BIND22);

                    pushFollow(FOLLOW_id_in_whiteSpace218);
                    id23=id();

                    state._fsp--;

                    stream_id.add(id23.getTree());
                    pushFollow(FOLLOW_unNeededLineEnding_in_whiteSpace220);
                    unNeededLineEnding24=unNeededLineEnding();

                    state._fsp--;

                    stream_unNeededLineEnding.add(unNeededLineEnding24.getTree());


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 35:31: -> WHITESPACE
                    {
                        adaptor.addChild(root_0, (CommonTree)adaptor.create(WHITESPACE, "WHITESPACE"));

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:36:4: ( RCON )? EXEC id unNeededLineEnding
                    {
                    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:36:4: ( RCON )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==RCON) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:36:4: RCON
                            {
                            RCON25=(Token)match(input,RCON,FOLLOW_RCON_in_whiteSpace229);  
                            stream_RCON.add(RCON25);


                            }
                            break;

                    }

                    EXEC26=(Token)match(input,EXEC,FOLLOW_EXEC_in_whiteSpace232);  
                    stream_EXEC.add(EXEC26);

                    pushFollow(FOLLOW_id_in_whiteSpace234);
                    id27=id();

                    state._fsp--;

                    stream_id.add(id27.getTree());
                    pushFollow(FOLLOW_unNeededLineEnding_in_whiteSpace236);
                    unNeededLineEnding28=unNeededLineEnding();

                    state._fsp--;

                    stream_unNeededLineEnding.add(unNeededLineEnding28.getTree());


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 36:37: -> WHITESPACE
                    {
                        adaptor.addChild(root_0, (CommonTree)adaptor.create(WHITESPACE, "WHITESPACE"));

                    }

                    retval.tree = root_0;
                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "whiteSpace"

    public static class unNeededLineEnding_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "unNeededLineEnding"
    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:38:1: unNeededLineEnding : ( '\"' | SEMI | RCON | EXEC | BIND | ID | ALIAS )* ( NEWLINE | EOF ) ;
    public final SourceMetaExprParser.unNeededLineEnding_return unNeededLineEnding() throws RecognitionException {
        SourceMetaExprParser.unNeededLineEnding_return retval = new SourceMetaExprParser.unNeededLineEnding_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token set29=null;
        Token set30=null;

        CommonTree set29_tree=null;
        CommonTree set30_tree=null;

        try {
            // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:39:2: ( ( '\"' | SEMI | RCON | EXEC | BIND | ID | ALIAS )* ( NEWLINE | EOF ) )
            // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:39:4: ( '\"' | SEMI | RCON | EXEC | BIND | ID | ALIAS )* ( NEWLINE | EOF )
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:39:4: ( '\"' | SEMI | RCON | EXEC | BIND | ID | ALIAS )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( ((LA7_0>=ALIAS && LA7_0<=EXEC)||(LA7_0>=SEMI && LA7_0<=ID)||LA7_0==28) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // C:\\Users\\Administrator\\Projects\\config\\Installer\\Installer\\Model\\DAL\\SourceMetaExpr.g:
            	    {
            	    set29=(Token)input.LT(1);
            	    if ( (input.LA(1)>=ALIAS && input.LA(1)<=EXEC)||(input.LA(1)>=SEMI && input.LA(1)<=ID)||input.LA(1)==28 ) {
            	        input.consume();
            	        adaptor.addChild(root_0, (CommonTree)adaptor.create(set29));
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);

            set30=(Token)input.LT(1);
            if ( input.LA(1)==EOF||input.LA(1)==NEWLINE ) {
                input.consume();
                adaptor.addChild(root_0, (CommonTree)adaptor.create(set30));
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "unNeededLineEnding"

    public static class overallScriptInfo_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };
